# fkeycapture

./: .gitignore  build.py  editor.py  main.py  pyproject.toml  pyproject.toml.backup
package/: setup.cfg  upload.sh
package/src/fkeycapture/: __init__.py
